--- a/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
@@ -348,8 +348,10 @@ a.cu_nav_button {
     width: 100%;
     margin: 0;
     text-indent: 0px !important;
-    height: 25px !important;
-    border-bottom: 1px solid $grey2 !important;
+    height: 30px !important;
+    border-style: solid !important;
+    border-width: 0 0 1px 0 !important;
+    border-color: $grey2 !important;
     border-radius: 0px 4px 4px 0px !important;
     background-image: none !important;
     background: transparent !important;
