Fixed wave alert for small text

--- a/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
@@ -524,6 +524,8 @@ a.cu_nav_button {
 
     // Invisible span tag added for accessibility error (empty button)
     span {
+      // Wave complains about small text, must be > 10px
+      font-size: 12px;
       display: none;
     }
   }
