--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -68,6 +68,10 @@ html.omni-nav-v2 {
   table.gsc-search-box {
     margin-bottom: 0;
 
+    tr {
+      line-height: 25px;
+    }
+
     td.gsc-input {
        padding-right: 0;
 
@@ -78,11 +82,7 @@ html.omni-nav-v2 {
 
       div.gsc-input-box {
         border: none;
-        height: 28px;
-
-        td {
-          line-height: 26px;
-        }
+        height: 28px;        
       }
     }
   }
@@ -211,6 +211,15 @@ html.omni-nav-v2 {
       display: table;
       table-layout: fixed;
       width: 100%;
+    }
+
+    .gsc-clear-button {
+      display: table-cell;
+    }
+
+    div.gsc-clear-button {
+      display: inline;
+      background-image: url('//www.google.com/uds/css/clear.gif');
     }
 
     .utility-nav-container {
@@ -353,14 +362,24 @@ html.omni-nav-v2 {
       .cu-search-box{ 
         margin-right: 8px;
         margin-top: 2vh;
-        border: 1px solid #545454;
       }
+
       .search-results-container { line-height: normal; }
-      input.gsc-input { border: 1px solid #545454;}
-      input.gsc-input { border-right: none; }
+      div.gsc-input-box { border: 1px solid #545454;}
+      div.gsc-input-box { border-right: none; }
       
-      button.gsc-search-button { 
+      button.gsc-search-button {
+        border: 1px solid #545454;
+        border-left: none;
         float: right; //new to fix search box
+      }
+
+      .gsib_b {
+        display: none;
+      }
+
+      .gsc-clear-button {
+        display: inline;
       }
 
       .gs-visibleUrl {
