fixed display for search close and clear button

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -379,7 +379,12 @@ html.omni-nav-v2 {
       }
 
       .gsc-clear-button {
+        display: table-cell;
+      }
+
+      div.gsc-clear-button {
         display: inline;
+        background-image: url('//www.google.com/uds/css/clear.gif');
       }
 
       .gs-visibleUrl {
