added float and for button and display none for button span

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -117,6 +117,8 @@ html.omni-nav-v2 {
       background-position: center;
       background-repeat: no-repeat;
       text-indent: -9999px;
+      border-left: none;
+      float: right;
     }
   }
 
@@ -191,6 +193,10 @@ html.omni-nav-v2 {
 
         &:hover { background: #CCCCCC;}
     }
+  }
+
+  .gsc-search-button-span {
+    display: none;
   }
 
 
@@ -375,7 +381,6 @@ html.omni-nav-v2 {
       button.gsc-search-button,
       input.gsc-search-button {
         border-left: none;
-        float: right; //new to fix search box
       }
 
       .gsib_a {
