--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -50,7 +50,7 @@ html.omni-nav-v2 {
     }
   }
 
-  /* Searchbox and search results  styling
+  /* Searchbox and search results styling
   ---------------------------------------- */
   #search-results-overlay {
     display: none;
@@ -94,10 +94,10 @@ html.omni-nav-v2 {
 
     .gsib_b { display: none; }
 
-    div.gsc-clear-button {
-      display: inline;
-      background-image: url('//www.google.com/uds/css/clear.gif');
+    .gsc-clear-button {
       display: table-cell;
+      padding-left: 5px;
+      div.gsc-clear-button { background-image: url('//www.google.com/uds/css/clear.gif'); }
     }
 
     //fixes issue with WAVE accessibility errors for empty button element google search added to search box
