--- a/app/assets/stylesheets/widgets/single_column/messaging.scss
+++ b/app/assets/stylesheets/widgets/single_column/messaging.scss
@@ -35,6 +35,74 @@
 		@include fluid-width-video-container;
 		display: inline-block;
 	}
+
+  .select {
+    position: relative;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;    
+    width: 100%;
+    max-width: 304px;
+
+    @include media($medium-screen) {
+      margin-left: 0;
+      margin-right: 0;
+    }
+
+    .select-arrow {
+      position: relative;
+      left: 8px;
+      top: -3px;
+      display: inline-block;
+      background: transparent;
+      border-width: 0px 1px 1px 0px;
+      border-style: solid;
+      width: 8px;
+      height: 8px;
+      transform: rotateZ(45deg);
+      pointer-events: none;
+    }
+
+    .select-button {
+      width: 100%;
+      font-size: 16px;
+      line-height: 30px;
+      outline: none;
+      padding: $base-spacing/2 $base-spacing;
+      background-color: transparent;
+      box-shadow: none;
+      margin: 0;
+      height: auto;
+      border: 2px solid #000000;
+      border-radius: 3px;
+      background-position: center right;
+      background-repeat: no-repeat;
+    }
+
+    .select-list {
+      display: none;
+      position: absolute;
+      margin: 0;
+      box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
+      width: 100%;
+      background-color: #FFF;
+      top: 0px;
+      z-index: 667;
+
+      li {
+        max-width: 100%;
+        font-size: 16px;
+        line-height: 36px;
+        margin: 0;
+        padding: $base-spacing/2 $base-spacing;
+
+        &:hover,
+        &.selected { 
+          background-color: #E5E5E5;
+        }
+      }
+    }
+  }  
 }
 
 /* One Column Variation */
