--- a/app/views/widgets/single_column/_messaging_2_column_vimeo_video.html
+++ b/app/views/widgets/single_column/_messaging_2_column_vimeo_video.html
@@ -17,14 +17,12 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
           </p>
         </div>
-        <div class="actions">
+        <div class="text-actions">
           <a class="theme-button">This is a button</a>
-          <nav class="select">
+          <nav class="text-widget-select">
             <button class="select-button theme-border-color theme-text-color">List Options<span class="select-arrow theme-border-color"></span></button>
             <ul class="select-list">
-              <li>
-                <a href="http://www.google.com">Option One</a>
-              </li>
+              <li><a href="http://www.google.com">Option One</a></li>
               <li><a href="http://www.google.com">Option Two</a></li>
             </ul>
           </nav>
